--- a/Frontend/frontend_pr2/package.json
+++ b/Frontend/frontend_pr2/package.json
@@ -14,7 +14,9 @@
     "@mui/material": "^5.15.14",
     "@mui/styled-engine-sc": "^6.0.0-alpha.18",
     "axios": "^1.6.8",
+    "bootstrap": "^5.3.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.8"
