--- a/Frontend/frontend_pr2/package.json
+++ b/Frontend/frontend_pr2/package.json
@@ -18,6 +18,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "styled-components": "^6.1.8",
     "sweetalert2": "^11.10.8"
   },
